# simpleble

./: .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  LICENSE.md  MANIFEST.in  README.rst  setup.py
.github/actions/android-setup/: action.yml
.github/actions/build-dbus/: action.yml
.github/actions/build-dbus-full/: action.yml
.github/actions/build-expat/: action.yml
.github/actions/build-native/: action.yml
.github/actions/build-native-linux/: action.yml
.github/actions/build-python-wheels/: README.md  action.yml
.github/actions/build-simpleble/: action.yml
.github/actions/checkout-with-version/: action.yml
.github/actions/package-native/: action.yml
.github/actions/setup-version/: action.yml
.github/workflows/: ci_android.yml  ci_build.yml  ci_build_jni.yml  ci_debug.yml  ci_docs.yml  ci_lint.yml  ci_linux.yml  ci_linux_internals.yml  ci_macos.yml  ci_main.yml  ci_python.yml  ci_release_cpp.yml  ci_release_python.yml  ci_simpleaible.yml  ci_simpleble.yml  ci_simplecble.yml  ci_simpledroidble.yml  ci_simplejavable.yml  ci_simplepyble.yml  ci_simplersble.yml  ci_smoketest.yml  ci_wheels.yml  ci_windows.yml
cmake/: epilogue.cmake
dependencies/internal/simplejni/: Common.hpp  Registry.hpp  VM.hpp
docs/: changelog.rst  cmake_primer.rst  conf.py  extras.rst  index.rst  licensing_faq.rst  overview.rst  package-lock.json  requirements.txt
docs-new/: Doxyfile  package-lock.json  package.json
docs-new/content/docs/: changelog.mdx  meta.json
docs-new/scripts/: build-doxygen.js  utils.js
docs-new/src/app/: global.css
docs/content/docs/: changelog.mdx  extras.mdx  index.mdx  meta.json
docs/simpleble/: faq.rst  tutorial.rst  usage.rst
docs/simplebluez/: api.rst
docs/simpledbus/: api.rst
docs/simpledroidble/: usage.rst
docs/simplepyble/: api.rst  usage.rst
docs/src/app/: layout.tsx
examples/simpleble/: CMakeLists.txt
examples/simpleble-android/app/: build.gradle.kts
examples/simpleble/src/: notify.cpp  power_cycle.cpp  scan.cpp  write.cpp
examples/simplebluez/: CMakeLists.txt
examples/simplebluez/pair/: pair.cpp
examples/simplebluez/src/: peripheral_e2e.cpp
examples/simplecble/: CMakeLists.txt
examples/simplersble/: Cargo.toml
hitl/src/: test_sanity.cpp
scripts/: check_version.sh
simpleaible/: README.rst  pyproject.toml
simpleble/: CMakeLists.txt
simpleble/include/simpleble/: Adapter.h  Advanced.h  Config.h  Types.h
simpleble/src/: Config.cpp  Utils.cpp
simpleble/src/backends/android/: AdapterAndroid.cpp  AdapterAndroid.h  BackendAndroid.cpp  BackendAndroid.h  PeripheralAndroid.cpp  PeripheralAndroid.h
simpleble/src/backends/android/android/: BluetoothAdapter.cpp  BluetoothAdapter.h  BluetoothDevice.cpp  BluetoothDevice.h  BluetoothGatt.cpp  BluetoothGatt.h  BluetoothGattCharacteristic.cpp  BluetoothGattCharacteristic.h  BluetoothGattDescriptor.cpp  BluetoothGattDescriptor.h  BluetoothGattService.cpp  BluetoothGattService.h  BluetoothScanner.cpp  BluetoothScanner.h  ClassHandler.cpp  ClassHandler.h  ParcelUUID.cpp  ParcelUUID.h  ScanRecord.cpp  ScanRecord.h  ScanResult.cpp  ScanResult.h  SparseArray.cpp  SparseArray.h  UUID.cpp  UUID.h
simpleble/src/backends/android/bridge/: BluetoothGattCallback.cpp  BluetoothGattCallback.h  ClassHandler.cpp  ClassHandler.h  ScanCallback.cpp  ScanCallback.h
simpleble/src/backends/android/jni/: Common.hpp  Iterator.cpp  Iterator.h  List.cpp  List.h  Set.cpp  Set.h  VM.hpp
simpleble/src/backends/android/simpleble-bridge/: build.gradle.kts
simpleble/src/backends/android/types/android/bluetooth/: BluetoothAdapter.cpp  BluetoothGatt.cpp  BluetoothGattCharacteristic.cpp  BluetoothGattDescriptor.cpp  BluetoothGattService.cpp
simpleble/src/backends/common/: AdapterBase.cpp  AdapterBase.h
simpleble/src/backends/dongl/: AdapterDongl.cpp  AdapterDongl.h  BackendDongl.cpp  PeripheralDongl.cpp  PeripheralDongl.h
simpleble/src/backends/dongl/cmd/: Commands.cpp  Commands.h  Events.cpp  Events.h  Utils.cpp  Utils.h
simpleble/src/backends/dongl/protocol/: d2h.pb.h  h2d.pb.h  simpleble.pb.c  simpleble.pb.h  softdevice.pb.c  softdevice.pb.h  softdevice_gap.pb.c  softdevice_gap.pb.h  softdevice_gattc.pb.c  softdevice_gattc.pb.h  softdevice_gatts.pb.c  softdevice_gatts.pb.h  softdevice_types.pb.c  softdevice_types.pb.h
simpleble/src/backends/dongl/serial/: Protocol.cpp  Protocol.h  ProtocolBase.cpp  Wire.cpp  Wire.h
simpleble/src/backends/dongl/usb/: UsbHelper.h  UsbHelperApple.cpp  UsbHelperApple.h  UsbHelperImpl.h  UsbHelperWindows.cpp
simpleble/src/backends/linux/: AdapterLinux.cpp  AdapterLinux.h  BackendBluez.cpp  PeripheralLinux.cpp
simpleble/src/backends/macos/: AdapterBaseMacOS.h  AdapterBaseMacOS.mm  AdapterMac.h  AdapterMac.mm  BackendCoreBluetooth.mm  PeripheralBaseMacOS.mm
simpleble/src/backends/plain/: AdapterPlain.cpp  AdapterPlain.h  BackendPlain.cpp
simpleble/src/backends/windows/: AdapterWindows.cpp  AdapterWindows.h  BackendWinRT.cpp  PeripheralWindows.cpp  PeripheralWindows.h  Utils.cpp
simpleble/src/frontends/base/: Adapter.cpp  Advanced.cpp  Backend.cpp
simpleble/src_c/: DEPRECATED
simpleble/test/src/: test_bytearray.cpp
simplebluez/: CMakeLists.txt
simplebluez/include/simplebluez/: Adapter.h  Agent.h  Bluez.h  BluezOrg.h  BluezOrgBluez.h  BluezRoot.h  Characteristic.h  Descriptor.h  Device.h  Service.h
simplebluez/src/: Adapter.cpp  Agent.cpp  Bluez.cpp  BluezOrg.cpp  BluezOrgBluez.cpp  BluezRoot.cpp  Characteristic.cpp  Descriptor.cpp  Device.cpp  Service.cpp
simplecble/: CMakeLists.txt
simpledbus/: CMakeLists.txt
simpledroidble/simpledroidble/: build.gradle.kts
simpledroidbridge/: build.gradle.kts
simplejavable/cpp/: CMakeLists.txt
simplejavable/java/: build.gradle.kts
simplepyble/: README.rst
simplepyble/src/: wrap_adapter.cpp  wrap_config.cpp  wrap_peripheral.cpp
simplersble/: README.md  build.rs
simplersble/src/: adapter.rs  characteristic.rs  descriptor.rs  lib.rs  peripheral.rs  service.rs  types.rs
utils/: build_jni.sh  build_lib.sh  build_simpledroidble.sh  format.sh  manifest_check.py
(+128 files in other folders)
